# ray-tracing-in-a-weekend

./: Cargo.toml  README.md
src/: lib.rs  main.rs  ppm.rs
src/objects/: hittable.rs  mod.rs  sphere.rs
src/view/: camera.rs  color.rs  interval.rs  mod.rs  ray.rs
src/world/: world.rs
