[package]
name = "ray-tracing-in-a-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.8", features = ["rayon"] }
nalgebra = { version = "0.33.0", features = ["rand"] }
rand = "0.8.5"
rayon = "1.10.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
